--- a/market-ajh/templates/home/welcome.index.html.twig
+++ b/market-ajh/templates/home/welcome.index.html.twig
@@ -6,8 +6,8 @@
 <div class="flex-col flex justify-center items-center h-screen">
     <div class="text-center bg-GREEN text-white p-8 rounded-lg shadow-lg">
         <h1 class="text-4xl font-bold mb-4">Bienvenue sur le market de la guilde Ah-Jin!</h1>
-        <img src="{{ asset('images/logo_guilde.jpg') }}" alt="Logo de la guilde" class="w-1/4 h-auto mb-6 mx-auto">
-        
+        <img src="{{ asset('build/images/logo_guilde.jpg') }}" alt="Logo de la guilde" class="w-1/4 h-auto mb-6 mx-auto">
+
         {% if app.user %}
             <p class="text-lg mb-4">
                 Bonjour {{ app.user.username }} ! Explorez les items disponibles et profitez des offres exclusives réservées aux membres de la guilde.
